src/objects/Apttus_Config2__ConfigSystemProperties__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Configuration &amp; Pricing System properties. The record should be named as &quot;System Properties&quot;.</description>
    <fields>
        <fullName>Apttus_Config2__ActionsColumnPosition__c</fullName>
        <description>The position of the actions column in the cart page. Actions column are displayed on the left, but may be overridden using this setting.</description>
        <inlineHelpText>The position of the actions column in the cart page. 

Valid values are: 
============= 
Left 
Right</inlineHelpText>
        <label>Actions Column Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AdminUser__c</fullName>
        <description>The admin user name (format = first name, last name)</description>
        <inlineHelpText>The admin user is the default owner of activities created by a user who is not allowed to be the owner (for e.g. customer portal user).</inlineHelpText>
        <label>Admin User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AlertInclude__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether to display radio buttons for Renew, Increment, Amend, Cancel asset actions.</description>
        <inlineHelpText>Check it to display radio buttons for  Renew, Increment, Amend, Cancel asset actions.</inlineHelpText>
        <label>Show Radio Buttons for Asset</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AlertSelectedExclude__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defer constraint check on option selection. Constraint check is done on GoToPricing or other page button click events.</description>
        <inlineHelpText>Check to defer constraint check on option selection. Constraint check is done on GoToPricing or other page button click events.</inlineHelpText>
        <label>Defer Constraint on Option Selection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AutoFinalizeOnCartApproval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the cart is auto finalized when the cart is approved and ready for finalization.</description>
        <inlineHelpText>Indicates whether the cart is auto finalized when the cart is approved and ready for finalization.</inlineHelpText>
        <label>Auto Finalize On Cart Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AutoSyncOnCartApproval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the cart is auto synchronized when the cart is approved and ready for finalization.</description>
        <inlineHelpText>Indicates whether the cart is auto synchronized when the cart is approved and ready for finalization.</inlineHelpText>
        <label>Auto Sync On Cart Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AutoUpdateCategoryView__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether auto incremental updates to category view are enabled</description>
        <inlineHelpText>Indicates whether auto incremental updates to category view are enabled</inlineHelpText>
        <label>Auto Update Category View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BaseProductRelationField__c</fullName>
        <description>The API name of the product field that associates a child product with base product.</description>
        <inlineHelpText>The API name of the product field that associates a child product with base product.</inlineHelpText>
        <label>Base Product Relation Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BypassSharing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether apex code can bypass record sharing</description>
        <inlineHelpText>Indicates whether apex code can bypass record sharing</inlineHelpText>
        <label>Bypass Sharing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BypassShoppingCart__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked the Shopping Cart page will be bypassed.</description>
        <inlineHelpText>A global setting to bypass the shopping cart.</inlineHelpText>
        <label>Bypass Shopping Cart</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CSSOverride__c</fullName>
        <description>Name of the static resource to override CSS in catalog, cart, attribute and options pages</description>
        <inlineHelpText>Name of the static resource to override CSS in catalog, cart, attribute and options pages</inlineHelpText>
        <label>CSS Override</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CartEditAccessIdleTimeout__c</fullName>
        <description>Field to specify number of minutes of idle time a configuration can be kept open in edit mode.</description>
        <inlineHelpText>Field to specify number of minutes of idle time a configuration can be kept open in edit mode.</inlineHelpText>
        <label>Cart Edit Access Idle Timeout in Minutes</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CascadeSharedAttributeUpdates__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether updates to shared bundle attributes are cascaded to options in the bundle</description>
        <inlineHelpText>Indicates whether updates to shared bundle attributes are cascaded to options in the bundle</inlineHelpText>
        <label>Cascade Shared Attribute Updates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CleanupInvalidRulePrompt__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable removal of line items promted by currently invalid rules.</description>
        <inlineHelpText>Enable removal of line items prompted by currently invalid rules.</inlineHelpText>
        <label>Cleanup Invalid Rule Prompt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ComputeTotalsInSeparateStep__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether totaling should be performed in a separate step or combined with the base pricing step</description>
        <inlineHelpText>Indicates whether totaling should be performed in a separate step or combined with the base pricing step</inlineHelpText>
        <label>Compute Totals In Separate Step</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ConstraintRuleExecutionMode__c</fullName>
        <description>Mode which Constraint Rules will execute.</description>
        <label>Constraint Rule Execution Mode</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CurrencyFieldPrecision__c</fullName>
        <description>Holds the number of decimal places for the currency fields.
(used by the formatfields function)</description>
        <label>Currency Field Precision</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CustomAssetActionLabelName__c</fullName>
        <description>The name of the custom label for the asset action.</description>
        <inlineHelpText>The name of the custom label for the asset action.</inlineHelpText>
        <label>Custom Asset Action Label Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CustomAssetActionPage__c</fullName>
        <description>The name of the custom asset action page</description>
        <inlineHelpText>The name of the custom asset action page</inlineHelpText>
        <label>Custom Asset Action Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CustomDealGuidancePage__c</fullName>
        <label>Custom Deal Guidance Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CustomOptionAttributePage__c</fullName>
        <description>The name of the custom attributes page associated with ConfigureBundle and SelectConfigOptionsDetailView pages</description>
        <inlineHelpText>The name of the custom attributes page associated with ConfigureBundle and SelectConfigOptionsDetailView pages</inlineHelpText>
        <label>Custom Option Attribute Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CustomPricingFields__c</fullName>
        <description>Enter the list of custom fields from the line item object used in pricing</description>
        <inlineHelpText>Enter the list of custom fields from the line item object used in pricing</inlineHelpText>
        <label>Custom Pricing Fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DefaultAssetPricingIndicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether asset pricing is enabled by default for asset related line items</description>
        <inlineHelpText>Indicates whether asset pricing is enabled by default for asset related line items</inlineHelpText>
        <label>Default Asset Pricing Indicator ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DefaultProductsPage__c</fullName>
        <description>The product selection page.</description>
        <inlineHelpText>Specify the product selection page to be displayed. 
Valid values are:
-----------------------
SelectConfigProducts
SelectConfigProductsFilterView</inlineHelpText>
        <label>Default Catalog Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DeferPricingUntilCart__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator to defer pricing until the user clicks on a pricing action. .</description>
        <inlineHelpText>Indicator to defer pricing until the user clicks on a pricing action.</inlineHelpText>
        <label>Defer Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DeferValidationCheckInBundles__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicator to defer validation check in the bundle configuration step</description>
        <inlineHelpText>Indicator to defer validation check in the bundle configuration step</inlineHelpText>
        <label>Defer Validation Check In Bundles</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DirectConfigureAssetActions__c</fullName>
        <description>Comma separated list of asset actions which will configure products directly.</description>
        <inlineHelpText>Comma separated values of Increment, Amend, Renew, Cancel actions. Listed actions will configure products directly.</inlineHelpText>
        <label>Direct Configure Asset Actions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DisableChargeTypeTotaling__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether charge type totaling is disabled</description>
        <inlineHelpText>Indicates whether charge type totaling is disabled</inlineHelpText>
        <label>Disable Charge Type Totaling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DisableConstraintRules__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether constraint rules are disabled</description>
        <inlineHelpText>A global setting to turn off constraint rules.</inlineHelpText>
        <label>Disable Constraint Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DisableExistingAssetPricing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether existing asset pricing is disabled.</description>
        <inlineHelpText>Indicates whether existing asset pricing is disabled. If disabled,,prices of existing assets are not rolled up.</inlineHelpText>
        <label>Disable Existing Asset Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DisablePricingQueryOptimization__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator to disable pricing query optimization for carts under the large cart threshold. By default fewer fields are retrieved for line items in the cart to optimize the heap. This indicator is used to disable the optimization to support customization.</description>
        <inlineHelpText>Indicator to disable pricing query optimization for carts under the large cart threshold. By default fewer fields are retrieved for line items in the cart to optimize the heap. This indicator is used to disable the optimization to support customization.</inlineHelpText>
        <label>Disable Pricing Query Optimization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DisableSOSLTextSearch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator to disable SOSL catalog search. When disabled, system uses SOQL catalog search.</description>
        <inlineHelpText>Indicator to disable SOSL catalog search. When disabled, system uses SOQL catalog search.</inlineHelpText>
        <label>DisableSOSLTextSearch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DisplayCartActionsAsDropdown__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Display action buttons inside a drop down menu</description>
        <inlineHelpText>Display action buttons inside a drop down menu</inlineHelpText>
        <label>Display Cart Actions As Dropdown</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EnableAggregatePricing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether aggregate pricing is enabled</description>
        <inlineHelpText>A global setting to enable aggregate price rules.</inlineHelpText>
        <label>Enable Aggregate Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EnableAutoReprice__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether auto reprice is enabled.</description>
        <inlineHelpText>A global setting to automatically reprice the cart when a price component is modified.</inlineHelpText>
        <label>Enable Auto Reprice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EnableAutoSequencingForOptions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether auto sequencing is enabled for options</description>
        <inlineHelpText>A global setting to enable auto sequencing for options</inlineHelpText>
        <label>Enable Auto Sequencing For Options</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EnableCartLockingForConcurrentAccess__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean flag to specify whether cart locking for concurrent access to cart is enabled</description>
        <inlineHelpText>Boolean flag to specify whether cart locking for concurrent access to cart is enabled</inlineHelpText>
        <label>Enable CartLocking for Concurrent Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EnableDefaultingForOptions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether defaulting is enabled for options</description>
        <inlineHelpText>A global setting to enable option defaulting rules.</inlineHelpText>
        <label>Enable Defaulting For Options(D)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EnableDefaultingForProducts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether defaulting is enabled for products</description>
        <inlineHelpText>A global setting to enable product defaulting rules.</inlineHelpText>
        <label>Enable Defaulting For Products</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EnableExternalPricing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether pricing will be done externally</description>
        <inlineHelpText>A global setting to enable external price calls. The external pricing call must be coded and associated with the reprice all button in the view cart page.</inlineHelpText>
        <label>Enable External Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EnableFastCloning__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether fast cloning is enabled</description>
        <inlineHelpText>Indicates whether fast cloning is enabled.</inlineHelpText>
        <label>Enable Fast Cloning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EnableFieldExpression__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether field expressions are enabled</description>
        <inlineHelpText>A global setting to turn on field expressions.</inlineHelpText>
        <label>Enable Field Expressions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EnableLocation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the location feature is enabled</description>
        <inlineHelpText>Indicates whether the location feature is enabled</inlineHelpText>
        <label>Enable Location</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EnableMatrixPricingForOptions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether matrix pricing is enabled for options</description>
        <inlineHelpText>A global setting to enable matrix pricing for options.</inlineHelpText>
        <label>Enable Matrix Pricing For Options</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EnableOptionalItems__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether items in the cart can be toggled as optional</description>
        <inlineHelpText>A global setting to enable optional items in the cart.</inlineHelpText>
        <label>Enable Optional Items</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EnhancedSearchURL__c</fullName>
        <description>Search URL end point for enhanced search. When it is blank native search is used. Currently used only for Product Search.</description>
        <inlineHelpText>Search URL end point for enhanced product search</inlineHelpText>
        <label>Enhanced Search URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ExpandBundleLinesByDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show all bundles exapanded with all option lines when cart loads.</description>
        <inlineHelpText>Whether the cart page should load with the option lines displayed for all bundles.</inlineHelpText>
        <label>Expand Bundles In Cart</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__FieldExpressionsExecutionMode__c</fullName>
        <description>Mode which Field Expressions will execute in.</description>
        <inlineHelpText>Valid Values: 
* Client
* Server</inlineHelpText>
        <label>Field Expressions Execution Mode</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__FixedButtonBar__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that the button bar will be fixed on catalog, configuration and cart pages.</description>
        <inlineHelpText>Indicates that the button bar will be fixed on catalog, configuration and cart pages.</inlineHelpText>
        <label>Fixed Button Bar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__GroupByFields__c</fullName>
        <label>GroupBy Fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__GuidePageDefault__c</fullName>
        <description>The default guide page for product selection</description>
        <inlineHelpText>The default guide page for product selection</inlineHelpText>
        <label>Guide Page Default</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HideAssetActions__c</fullName>
        <description>Comma separated list  of asset actions which should be hidden.</description>
        <inlineHelpText>Comma separated values of Increment, Amend, Renew, Cancel actions. Listed actions will be hidden from the users.</inlineHelpText>
        <label>Hide Asset Actions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HideCopyAction__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether copy action will be hidden in the cart view</description>
        <inlineHelpText>Indicates whether copy action will be hidden in the cart view</inlineHelpText>
        <label>Hide Copy Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HideDatesForOneTime__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hide Dates For One Time Charge</description>
        <inlineHelpText>Hide Dates For One Time Charge</inlineHelpText>
        <label>Hide Dates For One Time Charge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HideEvergreenEndDate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the end date will be hidden in the cart view for evergreen line items</description>
        <inlineHelpText>Indicates whether the end date will be hidden in the cart view for evergreen line items</inlineHelpText>
        <label>Hide Evergreen End Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HideGrandTotal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked grand total price will be hidden</description>
        <inlineHelpText>When checked grand total line will be hidden</inlineHelpText>
        <label>Hide Grand Total</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HideResolveConfigLink__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether to hide resolve configuration error page link.</description>
        <inlineHelpText>When checked the link to the resolve configuration error page is hidden. It is displayed along with the constraint rule messages.</inlineHelpText>
        <label>Hide Resolve Config Link</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HideSubtotalsInCart__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether subtotals should be hidden in the cart view</description>
        <inlineHelpText>Indicates whether subtotals should be hidden in the cart view</inlineHelpText>
        <label>Hide Subtotals In Cart</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IndicateErrorTypeExclude__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicate products excluded by error type exclude action (DEPRECATED)</description>
        <inlineHelpText>This custom setting is deprecated</inlineHelpText>
        <label>Indicate Error Type Exclude (D)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IndicateWarningTypeExclude__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicate products excluded by warning type exclude rule actions (DEPRECATED)</description>
        <inlineHelpText>This custom setting is deprecated</inlineHelpText>
        <label>Indicate Warning Type Exclude (D)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__InstanceUrl__c</fullName>
        <description>The Salesforce instance url</description>
        <inlineHelpText>The url of your Salesforce instance. The instance url will be used to create an absolute url for your custom pages.</inlineHelpText>
        <label>Instance Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__KeepAbandonedCarts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether abandoned carts should be kept</description>
        <inlineHelpText>Indicates whether abandoned carts should be kept</inlineHelpText>
        <label>Keep Abandoned Carts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LargeCartThreshold__c</fullName>
        <description>The threshold of the number of line items in the cart when exceeded indicates a large cart. A value of -1 inactivates the threshold. A large cart influences how items are processed in the application to stay under various platform governor limits..</description>
        <inlineHelpText>The threshold of the number of line items in the cart when exceeded indicates a large cart. A value of -1 inactivates the threshold. A large cart influences how items are processed in the application to stay under various platform governor limits..</inlineHelpText>
        <label>Large Cart Threshold</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MaxAdjustmentLines__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Indicates the maximum number of discount lines allowed for a line item.</description>
        <inlineHelpText>Indicates the maximum number of discount lines allowed for a line item.</inlineHelpText>
        <label>Max Adjustment Lines</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MaxConstraintRulesRoundTrip__c</fullName>
        <defaultValue>3</defaultValue>
        <description>This is the maximum number of round trips after which the constraint rule processing should stop.</description>
        <inlineHelpText>This is the maximum number of round trips after which the constraint rule processing should stop. Round trip happens only when auto included products trigger more rules.</inlineHelpText>
        <label>Max Constraint Rules Round Trip</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MiscChargeTypes__c</fullName>
        <description>Enter the list of miscellaneous charge types. Each charge type should be separated by a new line.</description>
        <inlineHelpText>Enter the list of miscellaneous charge types. Each charge type should be separated by a new line.</inlineHelpText>
        <label>Misc Charge Types</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MultiCurrencyManagement__c</fullName>
        <description>Indicate the multi-currency management system.</description>
        <inlineHelpText>Indicate which currency management system CPQ will use in a multi-currency environment. 
Valid values:
Apttus
Platform</inlineHelpText>
        <label>Multi Currency Management</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__OptionLineItemColumns__c</fullName>
        <description>Enter the list of fields from the line item object displayed in the Option Hierarchy page.  Each field API name may be separated either by a coma or by a new line.</description>
        <inlineHelpText>Enter the list of fields from the line item object displayed in the Option Hierarchy page.  Each field API name may be separated either by a coma or by a new line.</inlineHelpText>
        <label>Option Line Item Columns</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__OptionPricingChunkSize__c</fullName>
        <defaultValue>100</defaultValue>
        <description>The option pricing chunk size for bundles with large number of options. The default value is 100. The SFDC governor limit affects the chunk size.</description>
        <inlineHelpText>The option pricing chunk size for bundles with large number of options. The default value is 100. The SFDC governor limit affects the chunk size.</inlineHelpText>
        <label>Option Pricing Chunk Size</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__OptionProductColumns__c</fullName>
        <description>Enter the list of fields from the product object displayed in the Option Hierarchy page. Each field API name may be separated either by a coma or by a new line.</description>
        <inlineHelpText>Enter the list of fields from the product object displayed in the Option Hierarchy page. Each field API name may be separated either by a coma or by a new line.</inlineHelpText>
        <label>Option Product Columns</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__OptionsPageDefault__c</fullName>
        <description>The default page for configuring product options</description>
        <inlineHelpText>Enter the default options page. On configure command  this page is displayed for selecting options. Valid values are :
SelectConfigOptions 
SelectConfigOptionsTabView
SelectConfigOptionsListView
SelectConfigOptionsTreeView
SelectBundleOptions</inlineHelpText>
        <label>Options Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PercentageFieldPrecision__c</fullName>
        <description>Holds the percentage field precision.
(used by the formatfields function)</description>
        <label>Percentage Field Precision</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PreventErrorExcludeSelection__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether to prevent selection of products listed by error type exclude rule action</description>
        <label>Prevent Error Exclude Selection(D)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PreventErrorTypeExcludeSelection__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Prevent selection of products excluded by error type exclude rule action. Hides select button (DEPRECATED)</description>
        <inlineHelpText>This custom setting is deprecated</inlineHelpText>
        <label>Prevent Error Type Exclude Selection (D)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PricingBatchSize__c</fullName>
        <description>The pricing batch size. The default value is 1. The SFDC governor limit affects the batch size.</description>
        <inlineHelpText>The pricing batch size. The default value is 1. The SFDC governor limit affects the batch size.</inlineHelpText>
        <label>Pricing Batch Size</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PricingProfile__c</fullName>
        <description>The default pricing profile. The default value is Advanced

Valid values are:
=============
Basic
Advanced
External</description>
        <inlineHelpText>The default pricing profile. The default value is Advanced

Valid values are:
=============
Basic
Advanced
External</inlineHelpText>
        <label>Pricing Profile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductAttributeDetailPage__c</fullName>
        <description>The custom page to capture product attribute detail information</description>
        <inlineHelpText>The custom page to capture product attribute detail information</inlineHelpText>
        <label>Product Attribute Detail Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductAttributeExtensionLookupFields__c</fullName>
        <description>Contains the names of the Product Attribute Extension tables Lookup Field Names and will be read if the Attribute Extension is enabled</description>
        <inlineHelpText>Comma separated List of values to specify the Product Attribute Extension Objects Lookup Field Names.</inlineHelpText>
        <label>Product Attribute Extension Tables</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductDisplayMaxLength__c</fullName>
        <defaultValue>21</defaultValue>
        <description>Captures the maximum length of the product name for display. If the product name exceeds the specified length – it will be ellipsis display, else it will wrap the product name. The default length is 21 characters.</description>
        <inlineHelpText>Captures the maximum length of the product name for display. If the product name exceeds the specified length – it will be ellipsis display, else it will wrap the product name. The default length is 21 characters.</inlineHelpText>
        <label>Product Display Max Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>